# ambisense

./: .gitignore  README.md  pyproject.toml
docs/: offline_rewrite_knowledge.md
examples/: sample.txt  tutorial.md
src/ambisense/: __init__.py  __main__.py  cli.py  detector.py  filters.py  formatter.py  paraphraser.py  review.py  rewrite_fetchers.py  rewrite_importers.py  rewrite_knowledge.py  tree_builder.py  tree_renderer.py
src/ambisense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ambisense/data/: domain_lexicon.json  offline_rewrite_sources.json  phrasal_verbs.txt  preferred_terms.json  rewrite_roles.json  rewrite_rules.json  templates.json
tests/: conftest.py  test_detector.py  test_filters.py  test_paraphraser.py  test_review.py  test_rewrite_fetchers.py  test_rewrite_importers.py  test_rewrite_knowledge.py  test_tree_builder.py  test_tree_renderer.py
tests/fixtures/: ambiguous_sentences.txt  unambiguous_sentences.txt
tools/: build_generated_rewrite_knowledge.py  fetch_offline_resources.py  import_offline_resources.py  validate_rewrite_knowledge.py
